Switch to ms 1.0.1
