# csharp-net35/src/Sphereon.SDK.Pdf/Api/ConversionPDFApi.cs
@@ -3,7 +3,7 @@
  *
  * <b>The PDF conversion API 'conversion2pdf' converts image, office and PDF files to (searcheable) PDF files.</b>    The flow is generally as follows:  1. First upload an image/file using the /conversion2pdf POST endpoint. You will get back a job response that contains a job with its associated settings.  2. Upload any additional images/files using the /conversion2pdf/{jobId} POST endpoint when you want to merge additional image, office or PDF files. You will get back the update job response that contains a job with its associated settings. Currently you can only merge spreadsheets with spreadsheet, documents with documents and images/pdfs with images/pdfs  3. Start the job from a PUT request to the /conversion2pdf/{jobid} endpoint, with the Job and Settings JSON as request body. The conversion to PDF will now start. The OCR setting is only applicable to images, since other files will always be searchable.  4. Check the job status from the /conversion2pdf/{jobid} GET endpoint until the status has changed to DONE or ERROR. Messaging using a websocket will be available as an alternative in a future version  5. Retrieve the PDF file using the /conversion2pdf/{jobid}/stream GET endpoint. This will return the PDF file only when the status is DONE. In other cases it will return the Job Response JSON (with http code 202 instead of 200)      <b>Interactive testing: </b>A web based test console is available in the <a href=\"https://store.sphereon.com\">Sphereon API Store</a>
  *
- * OpenAPI spec version: 1.0.0
+ * OpenAPI spec version: 1.0.1
  * Contact: dev@sphereon.com
  * Generated by: https://github.com/swagger-api/swagger-codegen.git
  *
@@ -323,7 +323,7 @@ namespace Sphereon.SDK.Pdf.Api
             if (jobid == null)
                 throw new ApiException(400, "Missing required parameter 'jobid' when calling ConversionPDFApi->DeleteJob");
 
-            var localVarPath = "/pdf/1.0.0/conversion2pdf/{jobid}";
+            var localVarPath = "/pdf/1.0.1/conversion2pdf/{jobid}";
             var localVarPathParams = new Dictionary<String, String>();
             var localVarQueryParams = new Dictionary<String, String>();
             var localVarHeaderParams = new Dictionary<String, String>(Configuration.DefaultHeader);
@@ -400,7 +400,7 @@ namespace Sphereon.SDK.Pdf.Api
             if (jobid == null)
                 throw new ApiException(400, "Missing required parameter 'jobid' when calling ConversionPDFApi->GetJob");
 
-            var localVarPath = "/pdf/1.0.0/conversion2pdf/{jobid}";
+            var localVarPath = "/pdf/1.0.1/conversion2pdf/{jobid}";
             var localVarPathParams = new Dictionary<String, String>();
             var localVarQueryParams = new Dictionary<String, String>();
             var localVarHeaderParams = new Dictionary<String, String>(Configuration.DefaultHeader);
@@ -474,7 +474,7 @@ namespace Sphereon.SDK.Pdf.Api
         public ApiResponse< ConversionJobResponse > GetJobsWithHttpInfo (List<string> status = null)
         {
 
-            var localVarPath = "/pdf/1.0.0/conversion2pdf";
+            var localVarPath = "/pdf/1.0.1/conversion2pdf";
             var localVarPathParams = new Dictionary<String, String>();
             var localVarQueryParams = new Dictionary<String, String>();
             var localVarHeaderParams = new Dictionary<String, String>(Configuration.DefaultHeader);
@@ -551,7 +551,7 @@ namespace Sphereon.SDK.Pdf.Api
             if (jobid == null)
                 throw new ApiException(400, "Missing required parameter 'jobid' when calling ConversionPDFApi->GetStream");
 
-            var localVarPath = "/pdf/1.0.0/conversion2pdf/{jobid}/stream";
+            var localVarPath = "/pdf/1.0.1/conversion2pdf/{jobid}/stream";
             var localVarPathParams = new Dictionary<String, String>();
             var localVarQueryParams = new Dictionary<String, String>();
             var localVarHeaderParams = new Dictionary<String, String>(Configuration.DefaultHeader);
@@ -633,7 +633,7 @@ namespace Sphereon.SDK.Pdf.Api
             if (job == null)
                 throw new ApiException(400, "Missing required parameter 'job' when calling ConversionPDFApi->SubmitJob");
 
-            var localVarPath = "/pdf/1.0.0/conversion2pdf/{jobid}";
+            var localVarPath = "/pdf/1.0.1/conversion2pdf/{jobid}";
             var localVarPathParams = new Dictionary<String, String>();
             var localVarQueryParams = new Dictionary<String, String>();
             var localVarHeaderParams = new Dictionary<String, String>(Configuration.DefaultHeader);
@@ -723,7 +723,7 @@ namespace Sphereon.SDK.Pdf.Api
             if (stream == null)
                 throw new ApiException(400, "Missing required parameter 'stream' when calling ConversionPDFApi->UploadAdditionalFile");
 
-            var localVarPath = "/pdf/1.0.0/conversion2pdf/{jobid}";
+            var localVarPath = "/pdf/1.0.1/conversion2pdf/{jobid}";
             var localVarPathParams = new Dictionary<String, String>();
             var localVarQueryParams = new Dictionary<String, String>();
             var localVarHeaderParams = new Dictionary<String, String>(Configuration.DefaultHeader);
@@ -801,7 +801,7 @@ namespace Sphereon.SDK.Pdf.Api
             if (stream == null)
                 throw new ApiException(400, "Missing required parameter 'stream' when calling ConversionPDFApi->UploadFile");
 
-            var localVarPath = "/pdf/1.0.0/conversion2pdf";
+            var localVarPath = "/pdf/1.0.1/conversion2pdf";
             var localVarPathParams = new Dictionary<String, String>();
             var localVarQueryParams = new Dictionary<String, String>();
             var localVarHeaderParams = new Dictionary<String, String>(Configuration.DefaultHeader);
