# csharp-net45/src/Sphereon.SDK.Pdf/Model/ConversionSettings.cs
@@ -3,7 +3,7 @@
  *
  * <b>The PDF conversion API 'conversion2pdf' converts image, office and PDF files to (searcheable) PDF files.</b>    The flow is generally as follows:  1. First upload an image/file using the /conversion2pdf POST endpoint. You will get back a job response that contains a job with its associated settings.  2. Upload any additional images/files using the /conversion2pdf/{jobId} POST endpoint when you want to merge additional image, office or PDF files. You will get back the update job response that contains a job with its associated settings. Currently you can only merge spreadsheets with spreadsheet, documents with documents and images/pdfs with images/pdfs  3. Start the job from a PUT request to the /conversion2pdf/{jobid} endpoint, with the Job and Settings JSON as request body. The conversion to PDF will now start. The OCR setting is only applicable to images, since other files will always be searchable.  4. Check the job status from the /conversion2pdf/{jobid} GET endpoint until the status has changed to DONE or ERROR. Messaging using a websocket will be available as an alternative in a future version  5. Retrieve the PDF file using the /conversion2pdf/{jobid}/stream GET endpoint. This will return the PDF file only when the status is DONE. In other cases it will return the Job Response JSON (with http code 202 instead of 200)      <b>Interactive testing: </b>A web based test console is available in the <a href=\"https://store.sphereon.com\">Sphereon API Store</a>
  *
- * OpenAPI spec version: 1.0.0
+ * OpenAPI spec version: 1.0.1
  * Contact: dev@sphereon.com
  * Generated by: https://github.com/swagger-api/swagger-codegen.git
  *
@@ -222,9 +222,10 @@ namespace Sphereon.SDK.Pdf.Model
         /// <param name="Compression">Compression.</param>
         /// <param name="ContainerConversion">ContainerConversion.</param>
         /// <param name="Version">Version.</param>
+        /// <param name="CsvSettings">CsvSettings.</param>
         /// <param name="OutputFileFormat">OutputFileFormat.</param>
         /// <param name="OcrMode">OcrMode.</param>
-        public ConversionSettings(Lifecycle Lifecycle = null, int? QualityFactor = null, string OutputFileName = null, EngineEnum? Engine = null, Compression Compression = null, ContainerConversionEnum? ContainerConversion = null, VersionEnum? Version = null, OutputFileFormatEnum? OutputFileFormat = null, OcrModeEnum? OcrMode = null)
+        public ConversionSettings(Lifecycle Lifecycle = null, int? QualityFactor = null, string OutputFileName = null, EngineEnum? Engine = null, Compression Compression = null, ContainerConversionEnum? ContainerConversion = null, VersionEnum? Version = null, CSVSettings CsvSettings = null, OutputFileFormatEnum? OutputFileFormat = null, OcrModeEnum? OcrMode = null)
         {
             this.Lifecycle = Lifecycle;
             this.QualityFactor = QualityFactor;
@@ -233,6 +234,7 @@ namespace Sphereon.SDK.Pdf.Model
             this.Compression = Compression;
             this.ContainerConversion = ContainerConversion;
             this.Version = Version;
+            this.CsvSettings = CsvSettings;
             this.OutputFileFormat = OutputFileFormat;
             this.OcrMode = OcrMode;
         }
@@ -259,6 +261,11 @@ namespace Sphereon.SDK.Pdf.Model
         [DataMember(Name="compression", EmitDefaultValue=false)]
         public Compression Compression { get; set; }
         /// <summary>
+        /// Gets or Sets CsvSettings
+        /// </summary>
+        [DataMember(Name="csvSettings", EmitDefaultValue=false)]
+        public CSVSettings CsvSettings { get; set; }
+        /// <summary>
         /// Returns the string presentation of the object
         /// </summary>
         /// <returns>String presentation of the object</returns>
@@ -273,6 +280,7 @@ namespace Sphereon.SDK.Pdf.Model
             sb.Append("  Compression: ").Append(Compression).Append("\n");
             sb.Append("  ContainerConversion: ").Append(ContainerConversion).Append("\n");
             sb.Append("  Version: ").Append(Version).Append("\n");
+            sb.Append("  CsvSettings: ").Append(CsvSettings).Append("\n");
             sb.Append("  OutputFileFormat: ").Append(OutputFileFormat).Append("\n");
             sb.Append("  OcrMode: ").Append(OcrMode).Append("\n");
             sb.Append("}\n");
@@ -347,6 +355,11 @@ namespace Sphereon.SDK.Pdf.Model
                     this.Version.Equals(other.Version)
                 ) && 
                 (
+                    this.CsvSettings == other.CsvSettings ||
+                    this.CsvSettings != null &&
+                    this.CsvSettings.Equals(other.CsvSettings)
+                ) && 
+                (
                     this.OutputFileFormat == other.OutputFileFormat ||
                     this.OutputFileFormat != null &&
                     this.OutputFileFormat.Equals(other.OutputFileFormat)
@@ -383,6 +396,8 @@ namespace Sphereon.SDK.Pdf.Model
                     hash = hash * 59 + this.ContainerConversion.GetHashCode();
                 if (this.Version != null)
                     hash = hash * 59 + this.Version.GetHashCode();
+                if (this.CsvSettings != null)
+                    hash = hash * 59 + this.CsvSettings.GetHashCode();
                 if (this.OutputFileFormat != null)
                     hash = hash * 59 + this.OutputFileFormat.GetHashCode();
                 if (this.OcrMode != null)
